tests/pass/test_null_is.tk
import std/io::println
import std/memory::assert

shape Data (
    v: i32
)

fn main() -> i32 {
    auto ^?p = new Data(v = 42)
    
    // Narrowing: ^?p is ^p
    if ^?p is ^p {
        println("Success: p.v = {}", p.v)
        assert(p.v == 42, "p.v value mismatch")
    } else {
        println("Failure: p is nullptr\n")
        assert(false, "p is nullptr (Logic should not reach here)")
    }

    auto ^?q# = nullptr
    if ^?q is nullptr {
        println("Success: q confirmed nullptr\n")
        assert(true, "q confirmed nullptr logic executed")
    } else {
        println("Error: q should be nullptr\n")
        assert(false, "q is not nullptr (Logic should not reach here)")
    }

    return 0
}
